fix bug menu overlay & force nowrap in tab-case

--- a/src/assets/css/MPF.css
+++ b/src/assets/css/MPF.css
@@ -455,6 +455,7 @@
 }
 
 .tab-case {
+    white-space: nowrap;
     margin-top: 10px;
     font-size: 2rem;
     display: flex;
@@ -503,7 +504,7 @@
 /* bugermenu */
 
 .burgermenu-overlay{
-    position: absolute;
+    position: fixed;
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
     width: 100vw;
@@ -515,7 +516,7 @@
 
 .burgermenu-container {
     z-index: 100;
-	position: absolute;
+	position: fixed;
     left: -600px;
     width: 550px;
     min-height: 100vh;
@@ -524,10 +525,13 @@
 }
 
 .activate {
-    z-index: 100;
-    left: 0;
-    display: flex;
-    opacity: 1;
+    z-index: 100 !important;
+    left: 0 !important;
+    right: 0 !important;
+    top: 0 !important;
+    bottom: 0!important;
+    display: flex !important;
+    opacity: 1 !important;
 }
 
 .burgermenu {
